Form Scrollbar fix

--- a/css/style.css
+++ b/css/style.css
@@ -179,7 +179,6 @@ nav{
 #lightboxTarget:target{
     display: block;
 }
-
 .contact-form{
     background: rgba(250,250,250,0.9);
     //width: 100%;
@@ -187,15 +186,30 @@ nav{
     
     left: 10px;
     right: 10px;
-    bottom: 10px;
-    top: 10px;
+    /*bottom: 10px;
+    //top: 10px;*/
     
     padding: 8px 6px;
     border-radius: 5px;
     box-shadow: 0px 1px 2px rgba(0,0,0,0.2);
     
+    /*TODO: fix close btn at bottom*/
+    overflow-y: auto;
+    height: inherit;
+    
+    //position: relative;
+    //vertical-align: middle;
 }
+/*.closebtn:before {
+  content: "";
+  display: inline-block;
+  vertical-align: middle;
+  height: 100%;
+}*/
 .closebtn{
+    //position: absolute;
+    //bottom: 10px;
+    
     text-decoration: none;
     color: black;
     display: inline-block;
@@ -205,10 +219,10 @@ nav{
     width: 20px;
     
     transition: color 350ms;
+    
 }
 .closebtn:hover{
     color: deepskyblue;
-    
 }
 
   /*/////////////////////////////////////
